chore: polish layout, fix cart header spacing issues

--- a/source/stylesheets/cart.css.sass
+++ b/source/stylesheets/cart.css.sass
@@ -5,7 +5,7 @@
 
 .cart-header
   border-bottom: 3px solid $primary-color
-  font-size: 12px
+  font-size: 14px
   line-height: 20px
   text-transform: uppercase
   letter-spacing: 0.09em
@@ -197,7 +197,7 @@
 
 .total h3
   font-family: $text-font
-  font-size: 12px
+  font-size: 14px
   line-height: 20px
   text-transform: uppercase
   letter-spacing: 0.09em
@@ -304,6 +304,7 @@
     text-align: center
 
   .total
+    margin-top: 80px
     padding: 0 10%
 
   .cart-items,
