--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -7,7 +7,6 @@
 body
   color: $primary-color
   font-family: $text-font
-  font-size: 62.5%
   -webkit-text-size-adjust: none
   text-rendering: optimizeLegibility
   cursor: default
@@ -59,7 +58,7 @@ h3
   line-height: 1.4em
 
 h4
-  font-size: 12px
+  font-size: 14px
   line-height: 1.3em
   text-transform: uppercase
   letter-spacing: 0.09em
@@ -430,7 +429,7 @@ header .inner
   line-height: 70px
   color: $primary-color
   font-weight: bold
-  font-size: 12px
+  font-size: 14px
   text-decoration: none
   padding: 0 25px
   text-transform: uppercase
@@ -491,7 +490,7 @@ header .inner
   display: block
   color: $background-color
   background: $primary-color
-  font-size: 12px
+  font-size: 14px
   text-shadow: none
   line-height: 20px
   padding: 15px 20px
@@ -636,7 +635,7 @@ header .inner
   display: block
   text-align: center
   margin-top: 15px
-  font-size: 12px
+  font-size: 14px
   margin-bottom: -2px
   padding-right: 6px
   position: relative
@@ -664,7 +663,7 @@ header .inner
  */
 footer
   background: $primary-color
-  font-size: 12px
+  font-size: 14px
   line-height: 1.3em
   color: $background-color
   min-height: 120px
@@ -695,6 +694,7 @@ footer
     flex-wrap: wrap
     align-items: center
     justify-content: center
+    margin-bottom: 20px
 
     li
 
@@ -854,7 +854,7 @@ footer
       gap: 20px
 
     .footer-text
-      margin: 0
+      margin: auto
 
   /* DOM mods */
   .visible-phone
